--- a/style/style.css
+++ b/style/style.css
@@ -437,8 +437,11 @@ main.om-vinbolaget section.about-company .info-container {
 main.om-vinbolaget section.about-company h2 {
   margin-bottom: 2rem;
 }
+main.om-vinbolaget section.about-company p {
+  line-height: 3rem;
+}
 main.om-vinbolaget section.about-company .img-wrapper {
-  width: 64rem;
+  max-width: 64rem;
   height: 42.7rem;
 }
 main.om-vinbolaget section.about-company img {
@@ -446,6 +449,33 @@ main.om-vinbolaget section.about-company img {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+main.om-vinbolaget section.about-developer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
+main.om-vinbolaget section.about-developer .info-container {
+  max-width: 55.8rem;
+  margin-right: 2rem;
+  padding-left: 2rem;
+}
+main.om-vinbolaget section.about-developer h2 {
+  margin-bottom: 2rem;
+}
+main.om-vinbolaget section.about-developer p {
+  line-height: 3rem;
+}
+main.om-vinbolaget section.about-developer .img-wrapper {
+  max-width: 42.7rem;
+  height: 64.4rem;
+}
+main.om-vinbolaget section.about-developer img {
+  width: 100%;
+  height: 100%;
+  -o-object-position: bottom;
+     object-position: bottom;
 }
 
 @media screen and (max-width: 1250px) {
@@ -455,27 +485,48 @@ main.om-vinbolaget section.about-company img {
   main.om-vinbolaget section.landing-page {
     padding: 0 5rem;
   }
+  main.om-vinbolaget section.about-developer .img-wrapper {
+    width: 100%;
+    height: 100%;
+  }
 }
 @media screen and (max-width: 950px) {
-  main.om-vinbolaget section.about-company {
+  main.om-vinbolaget section.about-company,
+  main.om-vinbolaget section.about-developer {
     justify-content: center;
     flex-wrap: wrap;
   }
-  main.om-vinbolaget section.about-company .info-container {
+  main.om-vinbolaget section.about-company .info-container,
+  main.om-vinbolaget section.about-developer .info-container {
     margin: 0 2rem 4rem 2rem;
     padding: 0;
+  }
+  main.om-vinbolaget section.about-company .img-wrapper {
+    width: 100%;
+    height: 100%;
+  }
+  main.om-vinbolaget section.about-developer {
+    flex-wrap: wrap-reverse;
+  }
+  main.om-vinbolaget section.about-developer .img-wrapper {
+    margin: 0 10rem;
   }
 }
 @media screen and (max-width: 480px) {
   main.om-vinbolaget section.landing-page {
     margin-bottom: 6.5rem;
   }
-  main.om-vinbolaget section.about-company .info-container p {
-    line-height: 3rem;
+  main.om-vinbolaget section.about-company {
+    margin-bottom: 4rem;
   }
   main.om-vinbolaget section.about-company .img-wrapper {
     width: 39rem;
     height: 26rem;
+  }
+  main.om-vinbolaget section.about-developer .img-wrapper {
+    width: 19rem;
+    height: 28.7rem;
+    margin: 0;
   }
 }
 main.startsida {
