--- a/style/style.scss
+++ b/style/style.scss
@@ -1,6 +1,8 @@
 @import "global";
 @import "header";
+@import "headline";
 @import "banner";
+@import "main";
 @import "footer";
-@import "omVinbolaget";
 @import "homepage";
+@import "omVinbolaget";
