--- a/style/style.scss
+++ b/style/style.scss
@@ -3,6 +3,8 @@
 @import "headline";
 @import "banner";
 @import "main";
+@import "checkbox";
 @import "footer";
 @import "homepage";
 @import "omVinbolaget";
+@import "viner";
