--- a/style/style.css
+++ b/style/style.css
@@ -36,6 +36,10 @@ h3 {
   font-size: 1.8rem;
 }
 
+h4 {
+  font-size: 2.2rem;
+}
+
 p {
   font-size: 1.8rem;
 }
@@ -49,8 +53,16 @@ a.link:hover {
   color: #616161;
 }
 
-input {
+input[type=search] {
   font-size: 2rem;
+}
+
+input[type=text] {
+  font-size: 1.6rem;
+}
+
+input {
+  font-family: "Libre Baskerville", Helvetica, sans-serif;
 }
 
 ::-moz-placeholder {
@@ -383,6 +395,47 @@ main {
     width: 100%;
   }
 }
+label:has(input[type=checkbox]) {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  font-size: 1.8rem;
+  cursor: pointer;
+}
+
+input[type=checkbox] {
+  position: relative;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  width: 2.4rem;
+  height: 2.4rem;
+  margin-right: 1rem;
+  background-color: #ffffff;
+  border-radius: 0.5rem;
+  outline: 0.1rem solid #212121;
+  cursor: pointer;
+  transition: background-color 0.15s ease-in-out;
+}
+
+input[type=checkbox]:checked {
+  background-color: #212121;
+}
+
+input[type=checkbox]:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: calc(50% - 0.7rem);
+  margin-left: calc(50% - 0.7rem);
+  content: "";
+  background-image: url("../icon/iconmonstr-check-mark.svg");
+  width: 1.4rem;
+  height: 1.4rem;
+}
+
 footer {
   box-shadow: rgba(14, 63, 126, 0.04) 0px 0px 0px 1px, rgba(42, 51, 69, 0.04) 0px -1px 1px -0.5px, rgba(42, 51, 70, 0.04) 0px -3px 3px -1.5px, rgba(42, 51, 70, 0.04) 0px -6px 6px -3px, rgba(14, 63, 126, 0.04) 0px -12px 12px -6px, rgba(14, 63, 126, 0.04) 0px -24px 24px -12px;
 }
@@ -677,4 +730,56 @@ main.om-vinbolaget section.about-developer img {
     height: 28.7rem;
     margin: 0;
   }
+}
+main.viner .products .filters {
+  width: 23.6rem;
+  margin-bottom: 5rem;
+}
+main.viner .products p.search-results {
+  margin: 2rem 0;
+}
+main.viner .products .filter-wine-types {
+  border-bottom: 0.1rem solid rgba(37, 37, 37, 0.5);
+  border-top: 0.1rem solid rgba(37, 37, 37, 0.5);
+}
+main.viner .products h4 {
+  margin-top: 2rem;
+  margin-bottom: 3rem;
+}
+main.viner .products ul {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+}
+main.viner .products li {
+  margin-bottom: 2rem;
+}
+main.viner .products .price-input-boxes {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  font-size: 1.8rem;
+}
+main.viner .products .price-input-boxes .input-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  margin-top: 1rem;
+}
+main.viner .products .price-input-boxes input {
+  width: 8rem;
+  height: 4rem;
+  padding-left: 1rem;
+  display: inline;
+  padding-top: 0.15rem;
+  border: none;
+  border-radius: 0.5rem;
+  outline: 0.1rem solid rgba(33, 33, 33, 0.8);
+}
+main.viner .products .price-input-boxes p.valuta {
+  font-size: 1.6rem;
+  margin-left: 1rem;
 }/*# sourceMappingURL=style.css.map */
