Renaming files and stuff

--- a/style/style.scss
+++ b/style/style.scss
@@ -5,6 +5,6 @@
 @import "main";
 @import "checkbox";
 @import "footer";
-@import "homepage";
+@import "startsida";
 @import "omVinbolaget";
 @import "viner";
