--- a/style/_global.scss
+++ b/style/_global.scss
@@ -16,6 +16,7 @@ $font-color-opacity-60: rgba(
 $links-color-hover: #616161;
 
 $button-add-to-cart-color: #095741;
+$button-add-to-cart-color-hover: #0b7356;
 
 $divider-color: rgba(
   $color: #252525,
@@ -55,6 +56,8 @@ $h2-mobile-font: calc($h2-font - 1rem);
 $h2-mobile-subheading-font: calc($h2-subheading-font - 0.2rem);
 
 $h3-mobile-font: calc($h3-font - 0.2rem);
+
+$h4-mobile-font: calc($h4-font - 0.4rem);
 
 $p-mobile-font: calc($p-font - 0.2rem);
 $p-mobile-subheading-font: calc($p-subheading-font - 0.2rem);
@@ -144,6 +147,10 @@ a.link {
   }
 }
 
+label {
+  font-size: $p-font;
+}
+
 input[type="search"] {
   font-size: $input-search-font;
 }
@@ -208,5 +215,11 @@ img {
   }
   h3 {
     font-size: $h3-mobile-font;
+  }
+  h4 {
+    font-size: $h4-mobile-font;
+  }
+  label {
+    font-size: $p-mobile-font;
   }
 }
