--- a/style/style.css
+++ b/style/style.css
@@ -424,7 +424,7 @@ input[type=checkbox] {
   margin-right: 1rem;
   background-color: #ffffff;
   border-radius: 0.5rem;
-  outline: 0.1rem solid #212121;
+  border: 0.1rem solid #212121;
   cursor: pointer;
   transition: background-color 0.15s ease-in-out;
 }
