--- a/style/style.scss
+++ b/style/style.scss
@@ -4,8 +4,10 @@
 @import "banner";
 @import "main";
 @import "checkbox";
+@import "gallery";
 @import "footer";
 @import "startsida";
 @import "omVinbolaget";
 @import "viner";
 @import "varukorg";
+@import "produkt";
