--- a/style/_gallery.scss
+++ b/style/_gallery.scss
@@ -3,7 +3,8 @@
   padding: 3.2rem 1.6rem;
   .display-area {
     @include flex(center, center, column);
-    width: 50rem;
+    width: 100%;
+    max-width: 50rem;
     height: 55rem;
     margin-bottom: 1rem;
     background-color: $primary-color;
@@ -49,17 +50,65 @@
   z-index: 4;
 
   .gallery-display-area {
-    @include flex(center, center, row);
-    width: 100rem;
-    height: 65rem;
+    @include flex(center, space-between, row);
+    position: absolute;
+    width: 100%;
+    max-width: 100rem;
+    height: calc(100% - 10rem);
+    max-height: 67rem;
+    padding: 5rem 0;
     background-color: $primary-color;
     z-index: 2;
-    border-radius: 4rem;
+    border-radius: 3.5rem;
   }
 
-  button {
+  .img-wrapper {
+    width: 100%;
+    max-width: 13.4rem;
+    height: 100%;
+    max-height: 57rem;
+  }
+
+  .img-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+
+  .video-wrapper {
+    width: 100%;
+    max-width: 32rem;
+    height: 100%;
+    max-height: 57rem;
+  }
+
+  video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  button.arrow-left,
+  button.arrow-right {
     width: 4rem;
     height: 4rem;
+  }
+  button.arrow-left {
+    margin-left: calc(2rem + 3vw);
+  }
+
+  button.arrow-right {
+    margin-right: calc(2rem + 3vw);
+  }
+
+  button.close {
+    position: absolute;
+    width: 4rem;
+    height: 4rem;
+    top: 0;
+    right: 0;
+    margin-top: 2rem;
+    margin-right: calc(2rem + 3vw);
   }
 
   .gallery-background {
@@ -69,5 +118,44 @@
     opacity: 0.5;
     z-index: 1;
     background-color: $font-color;
+  }
+}
+
+// Remove the ability to scroll through the page when gallery is expanded.
+body.gallery-expanded-open {
+  overflow-y: hidden;
+}
+
+@media screen and (max-width: 480px) {
+  .gallery {
+    .display-area {
+      height: 29rem;
+    }
+    .img-wrapper {
+      width: 5.9rem;
+      height: 25rem;
+    }
+    .video-wrapper {
+      width: 16rem;
+      height: 100%;
+    }
+  }
+  .gallery-expanded {
+    @include flex(center, center, column);
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 4;
+
+    .gallery-display-area {
+      height: 100%;
+      max-height: none;
+      border-radius: 0;
+    }
+
+    .video-wrapper {
+      height: 40rem;
+      width: 22rem;
+    }
   }
 }
