--- a/style/style.css
+++ b/style/style.css
@@ -463,7 +463,8 @@ input[type=checkbox]:before {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 50rem;
+  width: 100%;
+  max-width: 50rem;
   height: 55rem;
   margin-bottom: 1rem;
   background-color: #f5f5f5;
@@ -518,17 +519,61 @@ input[type=checkbox]:before {
 .gallery-expanded .gallery-display-area {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   flex-direction: row;
-  width: 100rem;
-  height: 65rem;
+  position: absolute;
+  width: 100%;
+  max-width: 100rem;
+  height: calc(100% - 10rem);
+  max-height: 67rem;
+  padding: 5rem 0;
   background-color: #f5f5f5;
   z-index: 2;
-  border-radius: 4rem;
+  border-radius: 3.5rem;
 }
-.gallery-expanded button {
+.gallery-expanded .img-wrapper {
+  width: 100%;
+  max-width: 13.4rem;
+  height: 100%;
+  max-height: 57rem;
+}
+.gallery-expanded .img-wrapper img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.gallery-expanded .video-wrapper {
+  width: 100%;
+  max-width: 32rem;
+  height: 100%;
+  max-height: 57rem;
+}
+.gallery-expanded video {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.gallery-expanded button.arrow-left,
+.gallery-expanded button.arrow-right {
   width: 4rem;
   height: 4rem;
+}
+.gallery-expanded button.arrow-left {
+  margin-left: calc(2rem + 3vw);
+}
+.gallery-expanded button.arrow-right {
+  margin-right: calc(2rem + 3vw);
+}
+.gallery-expanded button.close {
+  position: absolute;
+  width: 4rem;
+  height: 4rem;
+  top: 0;
+  right: 0;
+  margin-top: 2rem;
+  margin-right: calc(2rem + 3vw);
 }
 .gallery-expanded .gallery-background {
   position: absolute;
@@ -539,6 +584,42 @@ input[type=checkbox]:before {
   background-color: #212121;
 }
 
+body.gallery-expanded-open {
+  overflow-y: hidden;
+}
+
+@media screen and (max-width: 480px) {
+  .gallery .display-area {
+    height: 29rem;
+  }
+  .gallery .img-wrapper {
+    width: 5.9rem;
+    height: 25rem;
+  }
+  .gallery .video-wrapper {
+    width: 16rem;
+    height: 100%;
+  }
+  .gallery-expanded {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 4;
+  }
+  .gallery-expanded .gallery-display-area {
+    height: 100%;
+    max-height: none;
+    border-radius: 0;
+  }
+  .gallery-expanded .video-wrapper {
+    height: 40rem;
+    width: 22rem;
+  }
+}
 footer {
   box-shadow: rgba(14, 63, 126, 0.04) 0px 0px 0px 1px, rgba(42, 51, 69, 0.04) 0px -1px 1px -0.5px, rgba(42, 51, 70, 0.04) 0px -3px 3px -1.5px, rgba(42, 51, 70, 0.04) 0px -6px 6px -3px, rgba(14, 63, 126, 0.04) 0px -12px 12px -6px, rgba(14, 63, 126, 0.04) 0px -24px 24px -12px;
 }
