--- a/style/_global.scss
+++ b/style/_global.scss
@@ -33,6 +33,7 @@ $h2-alternate-font: 2.8rem;
 $h2-subheading-font: 2rem;
 
 $h3-font: 1.8rem;
+$h3-alternate-font: 2.4rem;
 
 $h4-font: 2.2rem;
 
@@ -50,7 +51,7 @@ $button-font: 2rem;
 
 // Variables - Mobile Font sizes
 
-$h1-mobile-font: calc($h1-font - 2.2rem);
+$h1-mobile-font: calc($h1-font - 2rem);
 $h1-mobile-subheading-font: calc($h1-subheading-font - 0.6rem);
 
 $h2-mobile-font: calc($h2-font - 1rem);
@@ -58,6 +59,7 @@ $h2-mobile-alternate-font: calc($h2-alternate-font - 0.4rem);
 $h2-mobile-subheading-font: calc($h2-subheading-font - 0.2rem);
 
 $h3-mobile-font: calc($h3-font - 0.2rem);
+$h3-mobile-alternate-font: calc($h3-alternate-font - 0.4rem);
 
 $h4-mobile-font: calc($h4-font - 0.4rem);
 
