--- a/style/style.css
+++ b/style/style.css
@@ -475,6 +475,7 @@ input[type=checkbox]:before {
 .gallery img.gallery-img {
   width: 100%;
   height: 100%;
+  cursor: pointer;
 }
 .gallery .video-wrapper {
   width: 30rem;
