Updatd homepage with new images and text

--- a/style/_startsida.scss
+++ b/style/_startsida.scss
@@ -78,6 +78,12 @@ main.startsida {
           }
         }
       }
+      img {
+        width: 28rem;
+        height: 26.8rem;
+        border-top-left-radius: 1.5rem;
+        border-top-right-radius: 1.5rem;
+      }
       .content {
         padding: 2rem 2rem;
       }
